--- a/JogoArrocha/app/src/main/res/layout/activity_main.xml
+++ b/JogoArrocha/app/src/main/res/layout/activity_main.xml
@@ -9,41 +9,49 @@
     tools:context="com.example.felipe.jogoarrocha.MainActivity">
 
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        android:layout_gravity="center"
+        android:layout_weight="1">
+
         <TextView
             android:id="@+id/tvMainMenor"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="1 "
+            android:layout_height="match_parent"
             android:gravity="center"
+            android:layout_weight="1"
+            android:text="1"
             android:textSize="32sp"/>
         <TextView
             android:id="@+id/tvMainMaior"
+            android:layout_weight="1"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="100"
+            android:layout_height="match_parent"
             android:gravity="center"
+            android:text="100"
             android:textSize="32sp"/>
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_weight="1">
 
         <EditText
             android:id="@+id/etMainChute"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="32sp"/>
+            android:hint="Digite um número"
+            android:inputType="number"
+            android:textSize="25sp"/>
 
         <Button
             android:id="@+id/btMainChute"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="32sp"
+            android:textSize="20sp"
             android:text="chutar"/>
 
     </LinearLayout>
