--- a/ExeCamera/app/src/main/res/layout/activity_main.xml
+++ b/ExeCamera/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
 
     <Button
         android:id="@+id/btMain"
-        android:text="compartilha foto"
+        android:text="compartilhar foto"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
