--- a/JogoArrocha/app/src/main/res/layout/activity_result.xml
+++ b/JogoArrocha/app/src/main/res/layout/activity_result.xml
@@ -16,7 +16,7 @@
             <TextView
                 android:id="@+id/tvResultTexto"
                 android:gravity="center"
-                android:textSize="32sp"
+                android:textSize="28sp"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
@@ -42,10 +42,10 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:text="Pontuação:"
+                android:text="Pontuação"
                 android:gravity="center"
                 android:layout_weight="1"
-                android:textSize="32sp"/>
+                android:textSize="26sp"/>
 
             <TextView
                 android:id="@+id/tvResultScore"
