--- a/MeusLugares/app/src/main/res/layout/activity_exibe.xml
+++ b/MeusLugares/app/src/main/res/layout/activity_exibe.xml
@@ -8,21 +8,37 @@
     android:orientation="vertical"
     tools:context="com.example.felipe.meuslugares.ExibeActivity">
 
-    <EditText
-        android:id="@+id/etExibeNome"
+    <TextView
+        android:id="@+id/tvNome"
         android:hint="Nome"
+        android:textSize="30sp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
-    <EditText
-        android:id="@+id/etExibeDesc"
+    <TextView
+        android:id="@+id/tvDesc"
+        android:textSize="30sp"
         android:hint="Descrição"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <TextView
+        android:id="@+id/tvHora"
+        android:textSize="30sp"
+        android:hint="Hora"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <TextView
+        android:id="@+id/tvGPS"
+        android:textSize="30sp"
+        android:hint="GPS"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
     <ImageView
         android:id="@+id/ivExibeFoto"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="match_parent" />
 
 </LinearLayout>
